--- a/docker/Dockerfile.controller
+++ b/docker/Dockerfile.controller
@@ -1,5 +1,5 @@
 # ── Build stage ──────────────────────────────────────────────────────────────
-FROM golang:1.23-alpine AS builder
+FROM golang:1.25-alpine AS builder
 
 RUN apk add --no-cache git ca-certificates
 
@@ -8,7 +8,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
+RUN CGO_ENABLED=0 \
     go build -ldflags="-s -w" -o /usr/local/bin/opendebrid .
 
 # ── Runtime stage ────────────────────────────────────────────────────────────
@@ -25,8 +25,8 @@ RUN apk add --no-cache \
 
 COPY --from=builder /usr/local/bin/opendebrid /usr/local/bin/opendebrid
 
-# HTTP API, File server, gRPC
-EXPOSE 8080 8081 9090
+# HTTP API, File server, gRPC, BitTorrent
+EXPOSE 8080 8081 9090 6881-6999
 
 VOLUME ["/data/downloads"]
 
