--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -1,5 +1,5 @@
 # ── Build stage ──────────────────────────────────────────────────────────────
-FROM golang:1.23-alpine AS builder
+FROM golang:1.25-alpine AS builder
 
 RUN apk add --no-cache git ca-certificates
 
@@ -8,7 +8,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
+RUN CGO_ENABLED=0 \
     go build -ldflags="-s -w" -o /usr/local/bin/opendebrid .
 
 # ── Runtime stage ────────────────────────────────────────────────────────────
