--- a/internal/database/sqlc.yaml
+++ b/internal/database/sqlc.yaml
@@ -10,3 +10,6 @@ sql:
         sql_package: "pgx/v5"
         emit_json_tags: true
         emit_empty_slices: true
+        overrides:
+          - db_type: "jsonb"
+            go_type: "string"
