feat: add Docker Compose orchestration and Huma API integration
- Add docker-compose.yml for service orchestration
- Integrate Huma framework for structured API routes
- Refactor environment variable handling to use OD_ prefix
- Streamline configuration by removing file_server_port

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Thumbs.db
 *.key
 
 # ── Config (keep examples, ignore real configs) ─────────────────────────────
+config.toml
 configs/controller.toml
 configs/worker.toml
 
