--- a/docker/Dockerfile.controller
+++ b/docker/Dockerfile.controller
@@ -25,8 +25,8 @@ RUN apk add --no-cache \
 
 COPY --from=builder /usr/local/bin/opendebrid /usr/local/bin/opendebrid
 
-# HTTP API, File server, gRPC, BitTorrent
-EXPOSE 8080 8081 9090 6881-6999
+# HTTP + gRPC (multiplexed), BitTorrent
+EXPOSE 8080 6881-6999
 
 VOLUME ["/data/downloads"]
 
