fix: worker node dispatch, file cleanup, and daemon lifecycle
- Consolidate Dockerfiles into single image (controller default, worker via command)
- Add migrate up/down CLI subcommands and auto-load config.toml
- Consolidate auth token to single OD_NODE_AUTH_TOKEN config
- Wire scheduler into DownloadService for actual round-robin dispatch
- Add server.url config for externally reachable address
- Strip URL scheme for gRPC client connections
- Add DaemonEngine interface so engines provide their own daemon process;
  fixes aria2c not starting on worker nodes
- Pass engine name through NodeClient interface to worker gRPC calls;
  fixes all post-dispatch operations failing on remote workers
- Add engine_job_id to JobStatusReport proto; fixes GID being overwritten
  with job UUID on status sync
- Check dispatch Accepted field to properly fail rejected jobs
- Always call RemoveJob on delete even without engine_job_id for file cleanup
- Update module path to github.com/viperadnan-git/opendebrid

--- a/configs/controller.example.toml
+++ b/configs/controller.example.toml
@@ -9,6 +9,7 @@
 [server]
 host = "0.0.0.0"
 port = 8080
+# url = "http://controller:8080"  # externally reachable URL (auto-derived from hostname:port if unset)
 
 # ── PostgreSQL ───────────────────────────────────────────────────────────────
 [database]
@@ -27,7 +28,7 @@ admin_password = "admin"
 # id               = ""          # auto-detected from hostname
 # name             = ""          # defaults to node id
 download_dir       = "/data/downloads"
-worker_auth_token  = "worker-secret"   # shared token workers present to register
+auth_token         = "worker-secret"   # shared token workers present to register
 
 # ── Download engines ─────────────────────────────────────────────────────────
 [engines.aria2]
