--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
 services:
   controller:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.controller
+    build: .
     restart: unless-stopped
     environment:
       OD_DATABASE_URL: ${OD_DATABASE_URL}
-      OD_AUTH_JWT_SECRET: ${JWT_SECRET:-change-me-in-production}
-      OD_AUTH_ADMIN_PASSWORD: ${ADMIN_PASSWORD:-admin}
-      OD_NODE_WORKER_AUTH_TOKEN: ${WORKER_AUTH_TOKEN:-worker-secret}
+      OD_SERVER_URL: "http://localhost:8080"
+      OD_AUTH_ADMIN_PASSWORD: ${OD_ADMIN_PASSWORD:-admin}
       OD_NODE_ID: controller
-      OD_LOGGING_LEVEL: ${LOG_LEVEL:-debug}
+      OD_LOGGING_LEVEL: ${OD_LOG_LEVEL:-debug}
     ports:
       - "8080:8080"               # HTTP + gRPC (multiplexed)
       - "6800:6800"               # aria2 RPC
@@ -20,23 +17,29 @@ services:
       - ./config.toml:/etc/opendebrid/config.toml:ro
       - downloads-controller:/data/downloads
     command: ["controller", "--config", "/etc/opendebrid/config.toml"]
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:8080/health || exit 1"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   worker:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.worker
+    build: .
     restart: unless-stopped
     depends_on:
-      - controller
+      controller:
+        condition: service_healthy
     environment:
-      OD_CONTROLLER_URL: "controller:8080"
-      OD_CONTROLLER_TOKEN: ${WORKER_AUTH_TOKEN:-worker-secret}
+      OD_CONTROLLER_URL: "http://controller:8080"
+      OD_SERVER_URL: "http://worker:8080"
+      OD_NODE_AUTH_TOKEN: ${OD_NODE_AUTH_TOKEN}
       OD_NODE_ID: worker-1
-      OD_LOGGING_LEVEL: ${LOG_LEVEL:-debug}
+      OD_LOGGING_LEVEL: ${OD_LOG_LEVEL:-debug}
     ports:
       - "8082:8080" # HTTP (file serving only)
     volumes:
       - downloads-worker:/data/downloads
+    command: ["worker"]
 
   # Uncomment below to run a local PostgreSQL instance instead of external (e.g. Supabase).
   # postgres:
