feat: job name/size tracking, live progress UI, aria2 completion fix
- Add name and size columns to jobs table; engines report resolved
  name/size via BatchStatus (aria2: bittorrent info, ytdlp: destination)
- Default name from URL (filename, magnet dn=, or info hash)
- API returns live progress/speed/eta for active jobs, 0 defaults for
  unknown fields, nullable size
- Downloads and dashboard tables show clickable names, per-status
  progress column, silent background refresh
- Fix aria2 BatchStatus: fall back to tellStatus for completed/failed
  GIDs not in tellActive; clean up magnet metadata entries
- Fix config priority: check env/config before auto-generating secrets
- Pass OD_NODE_AUTH_TOKEN to controller in docker-compose
- UI: red danger delete button, ghost outline get-link, button hover
  fixes, remove nav decorative line

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       OD_DATABASE_URL: ${OD_DATABASE_URL}
       OD_SERVER_URL: "http://localhost:8080"
       OD_AUTH_ADMIN_PASSWORD: ${OD_ADMIN_PASSWORD:-admin}
+      OD_NODE_AUTH_TOKEN: ${OD_NODE_AUTH_TOKEN}
       OD_NODE_ID: controller
       OD_LOGGING_LEVEL: ${OD_LOG_LEVEL:-debug}
     ports:
