--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     build: .
     restart: unless-stopped
     environment:
-      OD_DATABASE_URL: ${OD_DATABASE_URL}
-      OD_SERVER_URL: "http://localhost:8080"
-      OD_AUTH_ADMIN_PASSWORD: ${OD_ADMIN_PASSWORD:-admin}
-      OD_NODE_AUTH_TOKEN: ${OD_NODE_AUTH_TOKEN}
-      OD_NODE_ID: controller
-      OD_LOGGING_LEVEL: ${OD_LOG_LEVEL:-debug}
+      OPENDEBRID_DATABASE_URL: ${OPENDEBRID_DATABASE_URL}
+      OPENDEBRID_SERVER_URL: "http://localhost:8080"
+      OPENDEBRID_AUTH_ADMIN_PASSWORD: ${OPENDEBRID_ADMIN_PASSWORD:-admin}
+      OPENDEBRID_NODE_AUTH_TOKEN: ${OPENDEBRID_NODE_AUTH_TOKEN}
+      OPENDEBRID_NODE_ID: controller
+      OPENDEBRID_LOGGING_LEVEL: ${OPENDEBRID_LOG_LEVEL:-debug}
     ports:
       - "8080:8080"               # HTTP + gRPC (multiplexed)
       - "6800:6800"               # aria2 RPC
@@ -31,11 +31,11 @@ services:
       controller:
         condition: service_healthy
     environment:
-      OD_CONTROLLER_URL: "http://controller:8080"
-      OD_SERVER_URL: "http://worker:8080"
-      OD_NODE_AUTH_TOKEN: ${OD_NODE_AUTH_TOKEN}
-      OD_NODE_ID: worker-1
-      OD_LOGGING_LEVEL: ${OD_LOG_LEVEL:-debug}
+      OPENDEBRID_CONTROLLER_URL: "http://controller:8080"
+      OPENDEBRID_SERVER_URL: "http://worker:8080"
+      OPENDEBRID_NODE_AUTH_TOKEN: ${OPENDEBRID_NODE_AUTH_TOKEN}
+      OPENDEBRID_NODE_ID: worker-1
+      OPENDEBRID_LOGGING_LEVEL: ${OPENDEBRID_LOG_LEVEL:-debug}
     ports:
       - "8082:8080" # HTTP (file serving only)
     volumes:
